--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,64 +1,30 @@
-name: Validar GCP con OIDC y POOL_ID dinámico
-
-on:
-  workflow_dispatch:
-    inputs:
-      pool_id:
-        description: "ID del Workload Identity Pool"
-        required: true
-      project_id:
-        description: "ID del proyecto evaluado"
-        required: true
-      project_number:
-        description: "Número de proyecto"
-        required: true
-      serviceaccount:
-        description: "Cuenta de servicio"
-        required: true
+permissions:
+  id-token: write
+  contents: read
 
 jobs:
-  auth-gcp:
+  scoutsuite-gcp:
     runs-on: ubuntu-latest
-
-    permissions:
-      id-token: write
-      contents: read
-
     steps:
-    - name: Checkout del repositorio
-      uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Autenticarse en GCP con OIDC
-      uses: google-github-actions/auth@v2
-      with:
-        token_format: 'id_token'
-        id_token_audience: 'sts.googleapis.com'
-        workload_identity_provider: projects/${{ github.event.inputs.project_number }}/locations/global/workloadIdentityPools/${{ github.event.inputs.pool_id }}/providers/github-provider
-        service_account: ${{ github.event.inputs.serviceaccount }}
-        create_credentials_file: true
-        export_environment_variables: true
-        universe: googleapis.com
-        cleanup_credentials: true
-        access_token_lifetime: 3600s
-        access_token_scopes: https://www.googleapis.com/auth/cloud-platform
-        id_token_include_email: false
+      - name: Auth GCP (OIDC)
+        id: auth
+        uses: google-github-actions/auth@v2
+        with:
+          workload_identity_provider: projects/534686086869/locations/global/workloadIdentityPools/testpool-0003/providers/github-provider
+          service_account: quickassessment@infra-odyssey-331604.iam.gserviceaccount.com
+          token_format: access_token
+          create_credentials_file: true   # <- crea GOOGLE_APPLICATION_CREDENTIALS
 
-    - name: Verificar autenticación
-      run: |
-        echo "Inputs recibidos:"
-        echo "Pool ID: ${{ github.event.inputs.pool_id }}"
-        echo "Project ID: ${{ github.event.inputs.project_id }}"
-        echo "Project Number: ${{ github.event.inputs.project_number }}"
-        echo "Service Account: ${{ github.event.inputs.serviceaccount }}"
-
-        gcloud auth list
-        gcloud config set project "${{ github.event.inputs.project_id }}"
-        gcloud compute project-info describe
-
-    - name: Ejecutar ScoutSuite (GCP)
-      run: |
-        mkdir -p cspm
-        pip3 install scoutsuite jq
-        scout gcp --project-id infra-odyssey-331604 --report-dir './cspm/' --report-name 'sci-cloud' --result-format json
-        tail ./cspm/scoutsuite-results/scoutsuite_results_sci-cloud.js -n +2 | jq '.' > ./cspm/scoutsuite_results_sci-cloud.json
-      continue-on-error: true
+      - name: Ejecutar ScoutSuite (GCP)
+        env:
+          GCP_PROJECT_ID: infra-odyssey-331604
+        run: |
+          mkdir -p cspm
+          pip3 install scoutsuite jq
+          # Usa el archivo efímero creado por el paso de auth
+          scout gcp -s "$GOOGLE_APPLICATION_CREDENTIALS" --project-id "$GCP_PROJECT_ID" \
+            --report-dir './cspm/' --report-name 'sci-cloud' --result-format json
+          tail ./cspm/scoutsuite-results/scoutsuite_results_sci-cloud.js -n +2 | jq '.' > ./cspm/scoutsuite_results_sci-cloud.json
+        continue-on-error: true
