--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,3 +1,10 @@
+name: ScoutSuite GCP
+
+on:
+  workflow_dispatch:
+  push:
+    branches: [ main ]
+
 permissions:
   id-token: write
   contents: read
@@ -9,13 +16,12 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Auth GCP (OIDC)
-        id: auth
         uses: google-github-actions/auth@v2
         with:
           workload_identity_provider: projects/534686086869/locations/global/workloadIdentityPools/testpool-0003/providers/github-provider
           service_account: quickassessment@infra-odyssey-331604.iam.gserviceaccount.com
           token_format: access_token
-          create_credentials_file: true   # <- crea GOOGLE_APPLICATION_CREDENTIALS
+          create_credentials_file: true
 
       - name: Ejecutar ScoutSuite (GCP)
         env:
@@ -23,8 +29,8 @@ jobs:
         run: |
           mkdir -p cspm
           pip3 install scoutsuite jq
-          # Usa el archivo efímero creado por el paso de auth
           scout gcp -s "$GOOGLE_APPLICATION_CREDENTIALS" --project-id "$GCP_PROJECT_ID" \
             --report-dir './cspm/' --report-name 'sci-cloud' --result-format json
-          tail ./cspm/scoutsuite-results/scoutsuite_results_sci-cloud.js -n +2 | jq '.' > ./cspm/scoutsuite_results_sci-cloud.json
+          tail ./cspm/scoutsuite-results/scoutsuite_results_sci-cloud.js -n +2 | jq '.' \
+            > ./cspm/scoutsuite_results_sci-cloud.json
         continue-on-error: true
