--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -30,7 +30,17 @@ jobs:
           mkdir -p cspm
           pip3 install scoutsuite jq
           scout gcp -s "$GOOGLE_APPLICATION_CREDENTIALS" --project-id "$GCP_PROJECT_ID" \
-            --report-dir './cspm/' --report-name 'sci-cloud' --result-format json
+            --no-browser --report-dir './cspm/' --report-name 'sci-cloud' --result-format json
           tail ./cspm/scoutsuite-results/scoutsuite_results_sci-cloud.js -n +2 | jq '.' \
             > ./cspm/scoutsuite_results_sci-cloud.json
         continue-on-error: true
+
+      - name: Publicar artefactos
+        uses: actions/upload-artifact@v4
+        with:
+          name: scoutsuite-gcp
+          path: |
+            cspm/sci-cloud.html
+            cspm/scoutsuite-results/scoutsuite_errors_sci-cloud.json
+            cspm/scoutsuite_results_sci-cloud.json
+
