--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -20,8 +20,8 @@ jobs:
       - name: Auth GCP (OIDC)
         uses: google-github-actions/auth@v2
         with:
-          workload_identity_provider: projects/534686086869/locations/global/workloadIdentityPools/scitum-infra-odyssey-331604/providers/github
-          service_account: ScitumAssessment@infra-odyssey-331604.iam.gserviceaccount.com
+          workload_identity_provider: projects/534686086869/locations/global/workloadIdentityPools/testpool-0003/providers/github-provider
+          service_account: quickassessment@infra-odyssey-331604.iam.gserviceaccount.com
           create_credentials_file: true
           export_environment_variables: true
 
@@ -43,3 +43,4 @@ jobs:
         with:
           name: cloudfox-gcp
           path: cspm
+
