--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -7,9 +7,8 @@ on:
       - main
 
 permissions:
-  id-token: write
+  id-token: write   # necesario para OIDC
   contents: read
-  packages: write
 
 jobs:
   cloudfox-gcp:
@@ -17,6 +16,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      # 1. Autenticación en GCP con OIDC
       - name: Auth GCP (OIDC)
         uses: google-github-actions/auth@v2
         with:
@@ -25,23 +25,27 @@ jobs:
           create_credentials_file: true
           export_environment_variables: true
 
+      # 2. Instalar CloudFox
       - name: Instalar Cloudfox
         run: |
           sudo apt update
           wget --retry-connrefused --tries=20 https://github.com/BishopFox/cloudfox/releases/download/v1.15.0/cloudfox-linux-amd64.zip
           unzip cloudfox-linux-amd64.zip
 
+      # 3. Ejecutar CloudFox
       - name: Ejecutar Cloudfox (GCP)
         env:
           GCP_PROJECT_ID: infra-odyssey-331604
         run: |
+          mkdir -p cspm
           cd cloudfox
           chmod +x cloudfox
           ./cloudfox gcp whoami --project $GCP_PROJECT_ID --outdir ${{ github.workspace }}/cspm/
-        continue-on-error: true
 
+      # 4. Publicar resultados
       - name: Publicar artefactos
         uses: actions/upload-artifact@v4
         with:
           name: cloudfox-gcp
           path: cspm
+
