--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -25,8 +25,17 @@ jobs:
           create_credentials_file: true
           export_environment_variables: true
 
+      - name: Debug ADC file
+        run: |
+          echo "GOOGLE_APPLICATION_CREDENTIALS=$GOOGLE_APPLICATION_CREDENTIALS"
+          ls -l $GOOGLE_APPLICATION_CREDENTIALS
+          cat $GOOGLE_APPLICATION_CREDENTIALS | head -20
+
       # 2. Instalar CloudFox
       - name: Instalar Cloudfox
+        env:
+          GCP_PROJECT_ID: infra-odyssey-331604
+          GOOGLE_APPLICATION_CREDENTIALS: ${{ env.GOOGLE_APPLICATION_CREDENTIALS }}
         run: |
           sudo apt update
           wget --retry-connrefused --tries=20 https://github.com/BishopFox/cloudfox/releases/download/v1.15.0/cloudfox-linux-amd64.zip
