--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -7,7 +7,6 @@ on:
       - main
 
 permissions:
-  id-token: write
   contents: read
 
 jobs:
@@ -16,29 +15,20 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # 1. Autenticación OIDC en GCP
-      - name: Auth GCP (OIDC)
-        id: auth
-        uses: google-github-actions/auth@v2
-        with:
-          workload_identity_provider: projects/534686086869/locations/global/workloadIdentityPools/testpool-0003/providers/github-provider
-          service_account: quickassessment@infra-odyssey-331604.iam.gserviceaccount.com
-          token_format: access_token
-          create_credentials_file: true
-
-      # 2. Forzar exportación de ADC para CloudFox
-      - name: Export GOOGLE_APPLICATION_CREDENTIALS
+      # 1. Escribir la key JSON en un archivo temporal
+      - name: Configurar credenciales GCP
         run: |
-          echo "GOOGLE_APPLICATION_CREDENTIALS=${{ steps.auth.outputs.credentials_file_path }}" >> $GITHUB_ENV
+          echo "${{ secrets.GCP_SA_KEY }}" > $HOME/gcp-key.json
+          echo "GOOGLE_APPLICATION_CREDENTIALS=$HOME/gcp-key.json" >> $GITHUB_ENV
 
-      # 3. Instalar CloudFox
+      # 2. Instalar CloudFox
       - name: Instalar Cloudfox
         run: |
           sudo apt update
           wget --retry-connrefused --tries=20 https://github.com/BishopFox/cloudfox/releases/download/v1.15.0/cloudfox-linux-amd64.zip
           unzip cloudfox-linux-amd64.zip
 
-      # 4. Ejecutar CloudFox
+      # 3. Ejecutar CloudFox
       - name: Ejecutar Cloudfox (GCP)
         env:
           GCP_PROJECT_ID: infra-odyssey-331604
@@ -47,4 +37,5 @@ jobs:
           cd cloudfox
           chmod +x cloudfox
           ./cloudfox gcp whoami --project $GCP_PROJECT_ID --outdir ${{ github.workspace }}/cspm/
+
 
