--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -18,9 +18,9 @@ jobs:
       # 1. Escribir la key JSON en un archivo temporal
       - name: Configurar credenciales GCP
         run: |
-          echo "${{ secrets.GCP_SA_KEY }}" > $HOME/gcp-key.json
-          cat $HOME/gcp-key.json
+          printf '%s' "${{ secrets.GCP_SA_KEY }}" > $HOME/gcp-key.json
           echo "GOOGLE_APPLICATION_CREDENTIALS=$HOME/gcp-key.json" >> $GITHUB_ENV
+
 
       # 2. Instalar CloudFox
       - name: Instalar Cloudfox
